# polymarket_trading

./: .gitignore  AUDIT_REPORT.md  AUTORESEARCH_PROMPT.md  README.md  program.md  program.md.new  program_ml_rl.md  pyproject.toml  results.tsv
.claude/plans/brainstorm-polymarket-bot/: brainstorm.md  (+1 more)
.firecrawl/: search-polymarket-clob.json
data/: orderbook_snapshots.db
docs/: backtesting_architecture.md
models/: market_ml_edges.pkl  rl_dqn_policy.pt  rl_hybrid_policy.pt  rl_imitation_policy.pt  rl_imitation_policy_best.pt
scripts/: backfill_event_ids.py  backfill_events.py  backfill_scheduled_close.py  benchmark_wave1.py  category_analysis.py  download_data.py  download_exhaustive.py  eval_strategies.py  fast_eval.py  prepare.py  real_backtest.py  rl_trader.py  scrape_orderbook.py  stress_test_cash_invariants.py  torch_models.py  train_gru_embeddings.py  train_hybrid_rl.py  train_model.py  train_rl.py  train_rl_imitation.py  train_rl_ppo.py  verify_data.py
src/polymarket_backtest/: __init__.py  cli.py  cross_market.py  db.py  demo.py  features.py  grid_search.py  grok_replay.py  gym_env.py  gym_env_multi.py  ingest.py  market_categories.py  market_simulator.py  metaculus_validator.py  metrics.py  ml_transport.py  parallel_eval.py  production_guards.py  replay_engine.py  report.py  schema.sql  snapshot_builder.py  splits.py  strategies.py  trading_env.py  types.py
tests/: test_cross_market.py  test_e2e.py  test_e2e_extended.py  test_gym_env_multi.py  test_ingest.py  test_production_guards.py  test_regressions.py  test_replay_regressions.py  test_trading_env.py
(+8 files in other folders)
