[project]
name = "polymarket-backtest"
version = "0.1.0"
description = "Leakage-safe Polymarket backtesting architecture with Grok replay mode"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "click>=8.3.1",
    "gymnasium>=1.2.3",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "numpy>=2.4.3",
    "polars>=1.39.0",
    "scikit-learn>=1.8.0",
    "scoringrules>=0.9.0",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]

[project.scripts]
polymarket-backtest = "polymarket_backtest.cli:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
